LRAC-12600 - [F] Fix spacing between checkbox and table columns

--- a/modules/apps/analytics/analytics-settings-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/analytics/analytics-settings-web/src/main/resources/META-INF/resources/css/main.scss
@@ -64,3 +64,12 @@
 	right: 0;
 	top: 0;
 }
+
+.table-autofit td,
+.table-autofit th {
+	width: auto;
+}
+
+.table thead tr td {
+	width: 40px;
+}
